--- a/maven2/res/layout/activity_main.xml
+++ b/maven2/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
+        android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
